--- a/src/docs/index.less
+++ b/src/docs/index.less
@@ -1,5 +1,4 @@
 @import "~bootstrap/less/bootstrap";
-@import "~font-awesome/less/font-awesome";
 
 /*
  * Globals
@@ -80,21 +79,13 @@ body {
   padding-left: 0;
   font-size: 16px;
   font-weight: bold;
-  color: #fff; /* IE8 proofing */
+  color: #cecece; /* IE8 proofing */
   color: rgba(255,255,255,.75);
-  border-bottom: 2px solid transparent;
 }
 .masthead-nav > li > a:hover,
 .masthead-nav > li > a:focus {
   background-color: transparent;
-  border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(255,255,255,.25);
-}
-.masthead-nav > .active > a,
-.masthead-nav > .active > a:hover,
-.masthead-nav > .active > a:focus {
   color: #fff;
-  border-bottom-color: #fff;
 }
 
 @media (min-width: 768px) {
